@@ -812,6 +812,7 @@ int printLink(ps_link link) {
    printf("reducedSeenBy %s\n", (link->reducedSeenBy) ? "on" : "off");
    printf("sendNotifyMessages %s\n", (link->sendNotifyMessages) ? "on" : "off");
    printf("allowRemoteControl %s\n", (link->allowRemoteControl) ? "on" : "off");
+   printf("unsubscribeOnAreaDelete %s\n", (link->unsubscribeOnAreaDelete) ? "on" : "off");
 
    printf("-------\n");
    return rc;
